--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     height:10rem;
     border: 1rem solid #fff;
     border-radius: 50%;
+    margin:2rem;
     
    
 }
@@ -52,19 +53,18 @@ body {
     transform-origin: bottom;
     }
 
-.message {
+.message > h1{
+    all:unset;
 display: grid;
-margin:2rem;
+justify-content: center;
 font-size: 3rem;
-padding:0.5rem;
-height:10vh;
-width: 40vw;
-color:rgb(0, 0, 0);
-background-color: rgb(123,0,255);
+max-width: 40vw;
+color:rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
 z-index: -1;
 }
-.message:hover {
-    color:rgb(255, 255, 255);
+.message>h1:hover {
+    color:rgb(123,0,255);
     cursor:pointer;
 }
 .visible {
