--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@ html {
     box-sizing: border-box;
 }
 body {
-    font-family: Helvetica, sans-serif;
-    font-weight: 200;
+    font-family: 'Silkscreen', cursive;
     background-color: #000;
     width: 100vw;
     height:100vh;
@@ -19,8 +18,6 @@ body {
     border: 1rem solid #fff;
     border-radius: 50%;
     margin:2rem;
-    
-   
 }
 
 .hour {
@@ -53,27 +50,40 @@ body {
     transform-origin: bottom;
     }
 
-.message > h1{
+.message {
     all:unset;
-display: grid;
-justify-content: center;
-font-size: 3rem;
-max-width: 40vw;
-color:rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);
-z-index: -1;
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    border: 0.2rem solid rgb(255, 255, 255);
+    box-shadow: 10px 10px rgb(75, 0, 155);
+    padding:1px;
+    width: 20vw;
+    color:black;
+    background: linear-gradient(rgb(190, 129, 255),rgb(255, 255, 255));
+    z-index: -1;
 }
-.message>h1:hover {
-    color:rgb(123,0,255);
+.message:hover {
+    color:rgb(255, 255, 255);
     cursor:pointer;
+    background: linear-gradient(rgb(160, 72, 255),rgb(255, 209, 209));
+}
+.message:active {
+    width: 18vw;
+    height:4vh;
+    align-items: center;
+    animation: ease-in-out;
+    color:black;
+    background: linear-gradient(rgb(160, 72, 255),rgb(255, 255, 255));
 }
 .visible {
-    display: grid;
+    display: flex;
     width:100vw;
-    height:20vh;
-    font-size: 5rem;
+    position: absolute;
+    max-height:20vh;
+    font-size: 3rem;
     justify-content: center;
     align-items: center;
-    color:rgb(255, 255, 255);
+    color:rgb(190, 129, 255);
     z-index:1;
 }
